--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Hamza Tazi Bouardi"
-  avatar           : "profile_cv_htb.png"
+  avatar           : "CV Photo.JPG"
   bio              : "Currently graduate student at MIT pursuing a Master of Business Analytics under the supervision of Prof. Dimitris Bertsimas."
   location         : "Cambridge, MA"
   employer         : "BCG GAMMA"
