--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
+  - title: "Portfolio"
+    url: /portfolio/
 
  # - title: "Talks"
  #   url: /talks/       
