--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,10 @@
 # main links links
 main:
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "Research & Publications"
+    url: /publications/
 
  # - title: "Talks"
  #   url: /talks/       
     
-  - title: "Projects"
-    url: /projects/
+  - title: "Portfolio"
+    url: /portfolio/
